--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <link rel="shortcut icon" type="image/png" href="static/favicon.png">
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app">Загрузка...</div>
     <script type="module" src="./index.ts"></script>
 </body>
 </html>
